--- a/KD-infoAppVer01/public/static/css/PostingHome.css
+++ b/KD-infoAppVer01/public/static/css/PostingHome.css
@@ -5,9 +5,11 @@
   align-items: center;
   padding: 10px;
 }
+
 .tab {
   display: flex;
 }
+
 .tab button {
   background-color: #f1f1f1;
   border: none;
@@ -17,17 +19,21 @@
   margin-right: 5px;
   transition: background-color 0.3s;
 }
+
 .tab button:hover {
   background-color: #ddd;
 }
+
 .tabcontent {
   display: none;
   padding: 20px;
 }
+
 .search-bar input[type="text"] {
   padding: 7px;
   margin-right: 5px;
 }
+
 .search-bar button {
   padding: 7px 15px;
 }
@@ -42,8 +48,9 @@
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: rgba(0,0,0,0.4);
+  background-color: rgba(0, 0, 0, 0.4);
 }
+
 .popup-content {
   background-color: #fefefe;
   margin: 15% auto;
@@ -52,18 +59,21 @@
   width: 80%;
   max-width: 600px;
 }
+
 .close {
   color: #aaa;
   float: right;
   font-size: 28px;
   font-weight: bold;
 }
+
 .close:hover,
 .close:focus {
   color: black;
   text-decoration: none;
   cursor: pointer;
 }
+
 .overlay {
   display: none;
   position: fixed;
@@ -76,6 +86,7 @@
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 5;
 }
+
 .open-popup-btn {
   position: fixed;
   bottom: 20px;
@@ -83,12 +94,14 @@
   padding: 10px 20px;
   font-size: 16px;
 }
+
 .reply-button {
   margin-top: 10px;
   padding: 5px 10px;
   font-size: 14px;
   cursor: pointer;
 }
+
 .delete-button {
   margin-top: 10px;
   margin-left: 10px;
@@ -96,3 +109,5 @@
   font-size: 14px;
   cursor: pointer;
 }
+
+/* ログアウトボタンのスタイル */
